src/index.css
@import url('https://fonts.googleapis.com/css2?family=Aleo:wght@500&family=IBM+Plex+Mono:wght@300;400&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 0%;
    --foreground: 0 0% 98%;
    --card: 217 33% 17%;
    --card-foreground: 0 0% 98%;
    --popover: 217 33% 17%;
    --popover-foreground: 0 0% 98%;
    --primary: 221 83% 53%;
    --primary-foreground: 0 0% 100%;
    --secondary: 215 25% 27%;
    --secondary-foreground: 0 0% 98%;
    --muted: 217 33% 17%;
    --muted-foreground: 218 11% 65%;
    --accent: 217 33% 17%;
    --accent-foreground: 0 0% 98%;
    --destructive: 0 63% 31%;
    --destructive-foreground: 0 0% 98%;
    --border: 215 25% 27%;
    --input: 215 25% 27%;
    --ring: 221 83% 53%;
    --radius: 0.375rem;
  }

  @font-face {
    font-family: 'Avenir';
    src: url('https://fonts.cdnfonts.com/css/avenir') format('woff2');
    font-weight: 400;
    font-style: normal;
  }

  h1 {
    font-family: 'Aleo', serif;
    letter-spacing: -0.01em;
    line-height: 1.15;
    font-weight: 500;
  }

  * {
    @apply border-border;
  }

  body {
    @apply bg-background text-foreground;
  }
}

@layer utilities {
  .scrollbar-hide {
    -ms-overflow-style: none;  /* IE and Edge */
    scrollbar-width: none;  /* Firefox */
  }

  .scrollbar-hide::-webkit-scrollbar {
    display: none;  /* Chrome, Safari and Opera */
  }
}

